// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multichannel wrapper 1 text in 1 single message 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  Text1
</message>
`;

exports[`Multichannel wrapper 2 text in 1 single message 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  Text1
  
Text2
</message>
`;

exports[`Multichannel wrapper 2 texts with buttons 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  Text1
  
Button 1
  
Text2
  
Button 2
</message>
`;

exports[`Multichannel wrapper just text 1`] = `
<message
  delay={0}
  indexMode="number"
  markdown={0}
  type="text"
  typing={0}
>
  Some text
</message>
`;

exports[`Multichannel wrapper many multichannels 1`] = `
[
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    Some text with replies
    
1. Reply 1
    
2. Reply 2
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    Some text with replies
    
3. Reply 1 should have 3.
    
4. Reply 2 should have 4.
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    Some text with replies
    
1. Reply 1 number reset
    
2. Reply 2 number reset
  </message>,
]
`;

exports[`Multichannel wrapper text and carousel legacy 1`] = `
[
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    This is a multichannel Carousel
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={0}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    
1. Previo a la compra
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    
2. Durante la compra
    
3. Durante la compra2
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={2}
    type="text"
    typing={0}
  >
    *Title3* _Subtitle3_
    
4. Posterior a la compra
  </message>,
]
`;

exports[`Multichannel wrapper text and carousel only show button text, 1 single message 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  This is a multichannel Carousel
  
a. Previo
  
b. Durante
</message>
`;

exports[`Multichannel wrapper text with buttons 1`] = `
<message
  delay={0}
  indexMode="number"
  markdown={0}
  type="text"
  typing={0}
>
  Some with buttons
  
1. Button 1
  
2. Button 2
  
- Visit website: http://testurl.com
</message>
`;

exports[`Multichannel wrapper text with replies 1`] = `
<message
  delay={0}
  indexMode="number"
  markdown={0}
  type="text"
  typing={0}
>
  Some text with replies
  
1. Reply 1
  
2. Reply 2
</message>
`;
